--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # 阿里云一键登录
+  ali_auth:
+    path: ../flutter_ali_auth
+  # 弹窗提示
+  fluttertoast: ^9.0.0
+  # HTTP 请求
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +65,17 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/logo.png
+    - assets/icon_close.png
+    - assets/return_btn.png
+    - assets/return_btn_fill.png
+    - assets/background_gif.gif
+    - assets/background_gif1.gif
+    - assets/background_gif2.gif
+    - assets/background_image.jpeg
+    - assets/background_video.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
