--- a/server/version-config.json
+++ b/server/version-config.json
@@ -1,6 +1,5 @@
 {
-  "version": 1,
-  "downloadUrl": "",
-  "updateLog": "当前为最新版本"
+  "version": 2,
+  "downloadUrl": "http://192.168.124.18:3000/updates/potato_timer_v2.apk",
+  "updateLog": "1. 新增功能A\\n2. 修复bug B\\n3. 优化性能"
 }
-
