--- a/.github/workflows/server-deploy.yaml
+++ b/.github/workflows/server-deploy.yaml
@@ -47,7 +47,7 @@ jobs:
             
             # 安装依赖
             echo "📦 安装依赖..."
-            npm install --production
+            npm install
             
             # 重启服务
             echo "🔄 重启服务..."
