--- a/.github/workflows/android-release.yaml
+++ b/.github/workflows/android-release.yaml
@@ -110,19 +110,32 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+          cache: 'gradle'  # 启用 Gradle 依赖缓存
 
-      # 5. 设置 Flutter 环境
+      # 5. 设置 Flutter 环境（带缓存）
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.38.3'
           channel: 'stable'
+          cache: true  # 启用 Flutter SDK 缓存
 
-      # 6. 获取 Flutter 依赖
+      # 6. 缓存 Flutter 依赖
+      - name: Cache Flutter dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.pub-cache
+            .dart_tool
+          key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pub-
+
+      # 7. 获取 Flutter 依赖
       - name: Install Flutter dependencies
         run: flutter pub get
 
-      # 6.5. 配置签名文件
+      # 8. 配置签名文件
       - name: Setup release signing
         run: |
           echo "🔐 配置 Release 签名..."
@@ -140,7 +153,7 @@ jobs:
           
           echo "✅ 签名配置完成"
 
-      # 7. 构建 Android APK (Release) - 注入生产环境配置
+      # 9. 构建 Android APK (Release) - 注入生产环境配置
       - name: Build Android APK with production config
         run: |
           echo "🔨 开始构建 Android APK (生产环境)..."
@@ -149,7 +162,7 @@ jobs:
             --dart-define=BASE_URL=http://8.141.116.178:3000
           echo "✅ APK 构建完成"
 
-      # 8. 重命名 APK 文件
+      # 10. 重命名 APK 文件
       - name: Rename APK
         run: |
           BUILD_NUM=${{ steps.parse_commit.outputs.build_number }}
@@ -157,7 +170,7 @@ jobs:
           echo "📦 APK 已重命名为: potato_timer_v${BUILD_NUM}.apk"
           ls -lh potato_timer_v${BUILD_NUM}.apk
 
-      # 9. 上传 APK 到服务器的 updates 目录
+      # 11. 上传 APK 到服务器的 updates 目录
       - name: Upload APK to server
         uses: appleboy/scp-action@v1
         with:
@@ -168,13 +181,7 @@ jobs:
           target: "/root/potato_timer_server/updates/"
           strip_components: 0
 
-      # 10. 设置 Node.js 环境
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      # 11. 在服务器上更新版本配置
+      # 12. 在服务器上更新版本配置
       - name: Update version config on server
         uses: appleboy/ssh-action@v1
         with:
@@ -198,7 +205,7 @@ jobs:
             
             echo "✅ 版本配置更新完成！"
 
-      # 12. 创建 GitHub Release
+      # 13. 创建 GitHub Release
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
@@ -218,7 +225,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # 13. 通知构建结果
+      # 14. 通知构建结果
       - name: Build Summary
         run: |
           echo "## 🎉 构建和部署成功！" >> $GITHUB_STEP_SUMMARY
