版本更新功能修复：修复下载链接获取，安装包访问权限，增加断点续传

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # 版本更新相关
   package_info_plus: ^8.0.0
   open_file: ^3.3.2
+  # 权限处理
+  permission_handler: ^11.3.1
   # 国际化
   flutter_localizations:
     sdk: flutter
